# mail-dispatch

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
email_providers/: __init__.py  base.py  models.py  service.py
email_providers/providers/: aws.py  azure.py  gcp.py
src/email_providers/: __init__.py  base.py  models.py
src/email_providers/providers/: __init__.py  aws.py  azure.py  gcp.py  sendgrid.py
src/templates/samples/static/: style.css
templates/samples/: test.html
tests/: base.py  conftest.py  test_providers.py  test_service.py  test_template_render.py
